test/parse/expr/atomic-disabled.txt
;;; ERROR: 1

(module
  (memory 1)
  (func
    i32.const 0 i32.const 0 wake drop
    i32.const 0 i32.const 0 i64.const 0 i32.wait drop
    i32.const 0 i64.const 0 i64.const 0 i64.wait drop

    i32.const 0 i32.atomic.load drop
    i32.const 0 i64.atomic.load drop
    i32.const 0 i32.atomic.load8_u drop
    i32.const 0 i32.atomic.load16_u drop
    i32.const 0 i64.atomic.load8_u drop
    i32.const 0 i64.atomic.load16_u drop
    i32.const 0 i64.atomic.load32_u drop

    i32.const 0 i32.const 0 i32.atomic.store
    i32.const 0 i64.const 0 i64.atomic.store
    i32.const 0 i32.const 0 i32.atomic.store8
    i32.const 0 i32.const 0 i32.atomic.store16
    i32.const 0 i64.const 0 i64.atomic.store8
    i32.const 0 i64.const 0 i64.atomic.store16
    i32.const 0 i64.const 0 i64.atomic.store32

    i32.const 0 i32.const 0 i32.atomic.rmw.add drop
    i32.const 0 i64.const 0 i64.atomic.rmw.add drop
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.add drop
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.add drop
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.add drop
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.add drop
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.add drop

    i32.const 0 i32.const 0 i32.atomic.rmw.sub drop
    i32.const 0 i64.const 0 i64.atomic.rmw.sub drop
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.sub drop
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.sub drop
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.sub drop
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.sub drop
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.sub drop

    i32.const 0 i32.const 0 i32.atomic.rmw.and drop
    i32.const 0 i64.const 0 i64.atomic.rmw.and drop
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.and drop
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.and drop
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.and drop
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.and drop
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.and drop

    i32.const 0 i32.const 0 i32.atomic.rmw.or drop
    i32.const 0 i64.const 0 i64.atomic.rmw.or drop
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.or drop
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.or drop
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.or drop
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.or drop
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.or drop

    i32.const 0 i32.const 0 i32.atomic.rmw.xor drop
    i32.const 0 i64.const 0 i64.atomic.rmw.xor drop
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.xor drop
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.xor drop
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.xor drop
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.xor drop
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.xor drop

    i32.const 0 i32.const 0 i32.atomic.rmw.xchg drop
    i32.const 0 i64.const 0 i64.atomic.rmw.xchg drop
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.xchg drop
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.xchg drop
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.xchg drop
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.xchg drop
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.xchg drop

    i32.const 0 i32.const 0 i32.const 0 i32.atomic.rmw.cmpxchg drop
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw.cmpxchg drop
    i32.const 0 i32.const 0 i32.const 0 i32.atomic.rmw8_u.cmpxchg drop
    i32.const 0 i32.const 0 i32.const 0 i32.atomic.rmw16_u.cmpxchg drop
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw8_u.cmpxchg drop
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw16_u.cmpxchg drop
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw32_u.cmpxchg drop

))
(;; STDERR ;;;
out/test/parse/expr/atomic-disabled.txt:6:29: error: opcode not allowed: wake
    i32.const 0 i32.const 0 wake drop
                            ^^^^
out/test/parse/expr/atomic-disabled.txt:7:41: error: opcode not allowed: i32.wait
    i32.const 0 i32.const 0 i64.const 0 i32.wait drop
                                        ^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:8:41: error: opcode not allowed: i64.wait
    i32.const 0 i64.const 0 i64.const 0 i64.wait drop
                                        ^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:10:17: error: opcode not allowed: i32.atomic.load
    i32.const 0 i32.atomic.load drop
                ^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:11:17: error: opcode not allowed: i64.atomic.load
    i32.const 0 i64.atomic.load drop
                ^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:12:17: error: opcode not allowed: i32.atomic.load8_u
    i32.const 0 i32.atomic.load8_u drop
                ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:13:17: error: opcode not allowed: i32.atomic.load16_u
    i32.const 0 i32.atomic.load16_u drop
                ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:14:17: error: opcode not allowed: i64.atomic.load8_u
    i32.const 0 i64.atomic.load8_u drop
                ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:15:17: error: opcode not allowed: i64.atomic.load16_u
    i32.const 0 i64.atomic.load16_u drop
                ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:16:17: error: opcode not allowed: i64.atomic.load32_u
    i32.const 0 i64.atomic.load32_u drop
                ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:18:29: error: opcode not allowed: i32.atomic.store
    i32.const 0 i32.const 0 i32.atomic.store
                            ^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:19:29: error: opcode not allowed: i64.atomic.store
    i32.const 0 i64.const 0 i64.atomic.store
                            ^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:20:29: error: opcode not allowed: i32.atomic.store8
    i32.const 0 i32.const 0 i32.atomic.store8
                            ^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:21:29: error: opcode not allowed: i32.atomic.store16
    i32.const 0 i32.const 0 i32.atomic.store16
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:22:29: error: opcode not allowed: i64.atomic.store8
    i32.const 0 i64.const 0 i64.atomic.store8
                            ^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:23:29: error: opcode not allowed: i64.atomic.store16
    i32.const 0 i64.const 0 i64.atomic.store16
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:24:29: error: opcode not allowed: i64.atomic.store32
    i32.const 0 i64.const 0 i64.atomic.store32
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:26:29: error: opcode not allowed: i32.atomic.rmw.add
    i32.const 0 i32.const 0 i32.atomic.rmw.add drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:27:29: error: opcode not allowed: i64.atomic.rmw.add
    i32.const 0 i64.const 0 i64.atomic.rmw.add drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:28:29: error: opcode not allowed: i32.atomic.rmw8_u.add
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.add drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:29:29: error: opcode not allowed: i32.atomic.rmw16_u.add
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.add drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:30:29: error: opcode not allowed: i64.atomic.rmw8_u.add
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.add drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:31:29: error: opcode not allowed: i64.atomic.rmw16_u.add
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.add drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:32:29: error: opcode not allowed: i64.atomic.rmw32_u.add
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.add drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:34:29: error: opcode not allowed: i32.atomic.rmw.sub
    i32.const 0 i32.const 0 i32.atomic.rmw.sub drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:35:29: error: opcode not allowed: i64.atomic.rmw.sub
    i32.const 0 i64.const 0 i64.atomic.rmw.sub drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:36:29: error: opcode not allowed: i32.atomic.rmw8_u.sub
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.sub drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:37:29: error: opcode not allowed: i32.atomic.rmw16_u.sub
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.sub drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:38:29: error: opcode not allowed: i64.atomic.rmw8_u.sub
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.sub drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:39:29: error: opcode not allowed: i64.atomic.rmw16_u.sub
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.sub drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:40:29: error: opcode not allowed: i64.atomic.rmw32_u.sub
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.sub drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:42:29: error: opcode not allowed: i32.atomic.rmw.and
    i32.const 0 i32.const 0 i32.atomic.rmw.and drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:43:29: error: opcode not allowed: i64.atomic.rmw.and
    i32.const 0 i64.const 0 i64.atomic.rmw.and drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:44:29: error: opcode not allowed: i32.atomic.rmw8_u.and
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.and drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:45:29: error: opcode not allowed: i32.atomic.rmw16_u.and
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.and drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:46:29: error: opcode not allowed: i64.atomic.rmw8_u.and
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.and drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:47:29: error: opcode not allowed: i64.atomic.rmw16_u.and
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.and drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:48:29: error: opcode not allowed: i64.atomic.rmw32_u.and
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.and drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:50:29: error: opcode not allowed: i32.atomic.rmw.or
    i32.const 0 i32.const 0 i32.atomic.rmw.or drop
                            ^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:51:29: error: opcode not allowed: i64.atomic.rmw.or
    i32.const 0 i64.const 0 i64.atomic.rmw.or drop
                            ^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:52:29: error: opcode not allowed: i32.atomic.rmw8_u.or
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.or drop
                            ^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:53:29: error: opcode not allowed: i32.atomic.rmw16_u.or
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.or drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:54:29: error: opcode not allowed: i64.atomic.rmw8_u.or
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.or drop
                            ^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:55:29: error: opcode not allowed: i64.atomic.rmw16_u.or
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.or drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:56:29: error: opcode not allowed: i64.atomic.rmw32_u.or
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.or drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:58:29: error: opcode not allowed: i32.atomic.rmw.xor
    i32.const 0 i32.const 0 i32.atomic.rmw.xor drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:59:29: error: opcode not allowed: i64.atomic.rmw.xor
    i32.const 0 i64.const 0 i64.atomic.rmw.xor drop
                            ^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:60:29: error: opcode not allowed: i32.atomic.rmw8_u.xor
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.xor drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:61:29: error: opcode not allowed: i32.atomic.rmw16_u.xor
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.xor drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:62:29: error: opcode not allowed: i64.atomic.rmw8_u.xor
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.xor drop
                            ^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:63:29: error: opcode not allowed: i64.atomic.rmw16_u.xor
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.xor drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:64:29: error: opcode not allowed: i64.atomic.rmw32_u.xor
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.xor drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:66:29: error: opcode not allowed: i32.atomic.rmw.xchg
    i32.const 0 i32.const 0 i32.atomic.rmw.xchg drop
                            ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:67:29: error: opcode not allowed: i64.atomic.rmw.xchg
    i32.const 0 i64.const 0 i64.atomic.rmw.xchg drop
                            ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:68:29: error: opcode not allowed: i32.atomic.rmw8_u.xchg
    i32.const 0 i32.const 0 i32.atomic.rmw8_u.xchg drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:69:29: error: opcode not allowed: i32.atomic.rmw16_u.xchg
    i32.const 0 i32.const 0 i32.atomic.rmw16_u.xchg drop
                            ^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:70:29: error: opcode not allowed: i64.atomic.rmw8_u.xchg
    i32.const 0 i64.const 0 i64.atomic.rmw8_u.xchg drop
                            ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:71:29: error: opcode not allowed: i64.atomic.rmw16_u.xchg
    i32.const 0 i64.const 0 i64.atomic.rmw16_u.xchg drop
                            ^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:72:29: error: opcode not allowed: i64.atomic.rmw32_u.xchg
    i32.const 0 i64.const 0 i64.atomic.rmw32_u.xchg drop
                            ^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:74:41: error: opcode not allowed: i32.atomic.rmw.cmpxchg
    i32.const 0 i32.const 0 i32.const 0 i32.atomic.rmw.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:75:41: error: opcode not allowed: i64.atomic.rmw.cmpxchg
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:76:41: error: opcode not allowed: i32.atomic.rmw8_u.cmpxchg
    i32.const 0 i32.const 0 i32.const 0 i32.atomic.rmw8_u.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:77:41: error: opcode not allowed: i32.atomic.rmw16_u.cmpxchg
    i32.const 0 i32.const 0 i32.const 0 i32.atomic.rmw16_u.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:78:41: error: opcode not allowed: i64.atomic.rmw8_u.cmpxchg
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw8_u.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:79:41: error: opcode not allowed: i64.atomic.rmw16_u.cmpxchg
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw16_u.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/atomic-disabled.txt:80:41: error: opcode not allowed: i64.atomic.rmw32_u.cmpxchg
    i32.const 0 i64.const 0 i64.const 0 i64.atomic.rmw32_u.cmpxchg drop
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
